--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@microsoft/interactive-document-renderer",
+  "type": "module",
   "private": true,
   "version": "1.0.0",
   "description": "Low-code, low-friction interactive documents made with markdown",
@@ -11,6 +12,9 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
+    "deploy": "node ./scripts/deploy.js",
+    "watch-typescript": "tsc -p . -w",
+    "build-typescript": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
