--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "moduleResolution": "node",
-        "outDir": "dist/es6",
+        "module": "node16",
+        "moduleResolution": "node16",
+        "outDir": "dist/es2022",
         "skipLibCheck": true,
-        "target": "es6",
-        "allowSyntheticDefaultImports": true
+        "target": "es2022",
+        "allowSyntheticDefaultImports": true,
+        "lib": [
+            "es2022",
+            "dom"
+        ]
     },
     "include": [
         "src"
