--- a/package.json
+++ b/package.json
@@ -19,20 +19,29 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/vscode": "^1.101.0",
-    "@types/mocha": "^10.0.10",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@types/assert": "^1.5.11",
-    "eslint": "^9.25.1",
+    "@types/mocha": "^10.0.10",
+    "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "mocha": "^11.1.0",
-    "typescript": "^5.8.3",
     "@vscode/test-web": "^0.0.69",
-    "esbuild": "^0.25.3",
-    "glob": "^11.0.2",
-    "npm-run-all": "^4.1.5",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "assert": "^2.1.0",
-    "rimraf": "^6.0.1"
+    "esbuild": "^0.25.3",
+    "eslint": "^9.25.1",
+    "glob": "^11.0.2",
+    "mocha": "^11.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.8.3",
+    "vega-typings": "^2.0.1"
+  },
+  "dependencies": {
+    "@mdit/plugin-attrs": "^0.22.0",
+    "@mdit/plugin-container": "^0.22.0",
+    "markdown-it": "^14.1.0",
+    "tabulator-tables": "^6.3.1",
+    "vega": "^6.1.2",
+    "vega-lite": "^6.1.0"
   }
 }
