--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   ],
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@rollup/plugin-commonjs": "^28.0.5",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/assert": "^1.5.11",
     "@types/mocha": "^10.0.10",
     "@types/vscode": "^1.101.0",
@@ -34,7 +36,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
-    "vega-typings": "^2.0.1"
+    "vega-typings": "^2.0.1",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@mdit/plugin-attrs": "^0.22.0",
