--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -15,7 +15,8 @@
     "deploy": "node ./scripts/deploy.js",
     "watch-typescript": "tsc -p . -w",
     "build-typescript": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bundle": "vite build --config vite.bundle.config.js",
+    "build": "npm run build-typescript && npm run bundle"
   },
   "repository": {
     "type": "git",
