--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interactive-documents-vscode",
+  "name": "@microsoft/interactive-documents-vscode",
   "displayName": "interactive-documents-vscode",
   "description": "",
   "version": "0.0.1",
@@ -32,6 +32,9 @@
     }
   },
   "scripts": {
+    "postinstall": "npm run resources",
+    "resources": "node ./scripts/resources.mjs",
+    "clean": "rimraf resources dist",
     "test": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. --extensionTestsPath=dist/web/test/suite/extensionTests.js",
     "pretest": "npm run compile-web",
     "vscode:prepublish": "npm run package-web",
