--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "version": "1.0.0",
   "description": "Low-code, low-friction interactive documents made with markdown",
-  "main": "dist/es2022/index.js",
-  "types": "dist/es2022/index.d.ts",
+  "main": "dist/esnext/index.js",
+  "types": "dist/esnext/index.d.ts",
   "files": [
     "dist",
     "LICENSE",
