--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -3,12 +3,12 @@
         "declaration": true,
         "module": "node16",
         "moduleResolution": "node16",
-        "outDir": "dist/es2022",
+        "outDir": "dist/esnext",
         "skipLibCheck": true,
-        "target": "es2022",
+        "target": "esnext",
         "allowSyntheticDefaultImports": true,
         "lib": [
-            "es2022",
+            "esnext",
             "dom"
         ]
     },
