--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "rollup-plugin-dts": "^6.2.1",
     "typescript": "^5.8.3",
     "vega-typings": "^2.0.1",
     "vite": "^6.3.5"
