--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "npm run build:01 --workspaces --if-present && npm run build:02 --workspaces --if-present",
+    "build": "npm run build:01 --workspaces --if-present && npm run build:02 --workspaces --if-present && npm run build:03 --workspaces --if-present",
     "start": "npm run dev -w @microsoft/interactive-document-host"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "@types/assert": "^1.5.11",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.3",
+    "@types/tabulator-tables": "^6.2.6",
     "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
