host accept idoc.json

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/interactive-document-compiler",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/esnext/index.js",
   "type": "module",
   "scripts": {
     "clean": "rimraf dist",
