--- a/packages/dsl/tsconfig.json
+++ b/packages/dsl/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "emitDeclarationOnly": true,
         "removeComments": false, // Keep comments in declaration files
         "outDir": "./dist/esnext",
         "stripInternal": true,
         "target": "esnext",
         "module": "node16",
         "moduleResolution": "node16",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src"
