--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "rollup-plugin-dts": "^6.2.1",
+    "ts-json-schema-generator": "^2.4.0",
     "typescript": "^5.8.3",
     "vega-typings": "^2.0.1",
     "vite": "^6.3.5"
