Add command to convert .idoc.json files to Markdown

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -27,6 +27,11 @@
         "command": "interactive-documents-vscode.convertToHtml",
         "title": "Convert to HTML",
         "category": "Interactive Documents"
+      },
+      {
+        "command": "interactive-documents-vscode.convertToMarkdown",
+        "title": "Convert to Markdown",
+        "category": "Interactive Documents"
       }
     ],
     "menus": {
@@ -50,6 +55,11 @@
           "command": "interactive-documents-vscode.convertToHtml",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
           "group": "interactive-documents"
+        },
+        {
+          "command": "interactive-documents-vscode.convertToMarkdown",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "group": "interactive-documents"
         }
       ],
       "editor/title/context": [
@@ -66,6 +76,11 @@
         {
           "command": "interactive-documents-vscode.convertToHtml",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "group": "interactive-documents"
+        },
+        {
+          "command": "interactive-documents-vscode.convertToMarkdown",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
           "group": "interactive-documents"
         }
       ]
