--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vscode/test-web": "^0.0.69",
     "assert": "^2.1.0",
+    "concurrently": "^9.2.0",
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
     "glob": "^11.0.2",
