--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "@vscode/test-web": "^0.0.69",
     "assert": "^2.1.0",
     "concurrently": "^9.2.0",
