--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,11 +1,26 @@
 {
   "name": "editor",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/esnext/index.js",
+  "types": "dist/esnext/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "dev": "vite --config vite.config.js",
+    "tsc": "tsc -p .",
+    "bundle": "vite build --config vite.bundle.config.js",
+    "build": "npm run tsc && npm run bundle"
   },
   "author": "Dan Marshall",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@fluentui/react-components": "^9.66.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
+  }
 }
