--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "clean": "rimraf dist",
     "dev": "vite",
-    "build-typescript": "tsc -p .",
+    "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
-    "build": "npm run build-typescript && npm run bundle",
+    "build": "npm run tsc && npm run bundle",
     "build:03": "npm run build",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
