--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@msrvida/chart-types": "^1.1.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1"
   }
