add split preview button

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -43,6 +43,12 @@
         "command": "interactive-documents-vscode.editIdoc",
         "title": "Edit Interactive Document",
         "category": "Interactive Documents"
+      },
+      {
+        "command": "interactive-documents-vscode.previewIdocSplit",
+        "title": "Preview Interactive Document (Split View)",
+        "category": "Interactive Documents",
+        "icon": "$(preview)"
       }
     ],
     "menus": {
@@ -91,6 +97,18 @@
           "command": "interactive-documents-vscode.editIdoc",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
           "group": "interactive-documents"
+        }
+      ],
+      "editor/title": [
+        {
+          "command": "interactive-documents-vscode.previewIdocSplit",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "group": "navigation"
+        },
+        {
+          "command": "interactive-documents-vscode.previewIdocSplit",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "group": "navigation"
         }
       ],
       "editor/title/context": [
