--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -9,7 +9,8 @@
     "dev": "vite --config vite.config.js",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
-    "build": "npm run tsc && npm run bundle"
+    "build": "npm run tsc && npm run bundle",
+    "build:03": "npm run build"
   },
   "author": "Dan Marshall",
   "license": "MIT",
