--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -1,17 +1,7 @@
 {
+    "extends": "../tsconfig.base.json",
     "compilerOptions": {
         "jsx": "react-jsx",
-        "declaration": true,
-        "module": "node16",
-        "moduleResolution": "node16",
-        "outDir": "dist/esnext",
-        "skipLibCheck": true,
-        "target": "esnext",
-        "allowSyntheticDefaultImports": true,
-        "lib": [
-            "esnext",
-            "dom"
-        ]
     },
     "include": [
         "src"
