use proper outdir per project

--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "declaration": true,
         "removeComments": false, // Keep comments in declaration files
-        "outDir": "./dist/esnext",
+        "outDir": "dist/esnext",
         "stripInternal": true,
         "target": "esnext",
         "module": "node16",
