--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "extends": "../tsconfig.base.json",
+    "compilerOptions": {
+        "outDir": "dist/esnext"
+    },
     "include": [
         "src"
     ]
