--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -2,11 +2,12 @@
   "name": "sandbox",
   "version": "1.0.0",
   "description": "Secure sandbox for interactive documents renderer",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/esnext/index.js",
   "scripts": {
     "clean": "rimraf dist && rimraf src/resources",
     "dev": "vite",
-    "resources": "node scripts/resources.js",
+    "resources": "node scripts/resources.mjs",
     "prebuild": "npm run resources",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
