run resources before build

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -151,7 +151,8 @@
     "test": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. --extensionTestsPath=dist/web/test/suite/extensionTests.js",
     "pretest": "npm run compile-web",
     "vscode:prepublish": "npm run package-web",
-    "build:05": "npm run compile-web",
+    "build": "npm run resources && npm run compile-web",
+    "build:05": "npm run build",
     "compile-web": "npm run check-types && npm run lint && npm run resources && node esbuild.js",
     "watch-web": "npm-run-all -p watch-web:*",
     "watch-web:esbuild": "node esbuild.js --watch",
