--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -65,81 +65,81 @@
         },
         {
           "command": "interactive-documents-vscode.previewIdoc",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.previewIdoc",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToHtml",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToHtml",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToMarkdown",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.editIdoc",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         }
       ],
       "editor/title": [
         {
           "command": "interactive-documents-vscode.previewIdocSplit",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "navigation"
         },
         {
           "command": "interactive-documents-vscode.previewIdocSplit",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
           "command": "interactive-documents-vscode.previewIdoc",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.previewIdoc",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToHtml",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToHtml",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.convertToMarkdown",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.editIdoc",
-          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc\\.md$/",
+          "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
           "command": "interactive-documents-vscode.editIdoc",
-          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc\\.json$/",
+          "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         }
       ]
