--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "@microsoft/interactive-documents-vscode",
-  "displayName": "interactive-documents-vscode",
+  "name": "chartifact",
+  "displayName": "Chartifact",
   "private": true,
   "description": "",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/microsoft/interactive-documents.git"
+  },
+  "author": "Dan Marshall",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/microsoft/interactive-documents/issues"
+  },
+  "homepage": "https://github.com/microsoft/interactive-documents#readme",
   "engines": {
     "vscode": "^1.101.0"
   },
@@ -15,37 +25,37 @@
   "contributes": {
     "commands": [
       {
-        "command": "interactive-documents-vscode.newIdocJson",
+        "command": "chartifact.newIdocJson",
         "title": "New Interactive Document (json)",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.newIdocMarkdown",
+        "command": "chartifact.newIdocMarkdown",
         "title": "New Interactive Document (markdown)",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.previewIdoc",
+        "command": "chartifact.previewIdoc",
         "title": "Preview Interactive Document",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.convertToHtml",
+        "command": "chartifact.convertToHtml",
         "title": "Convert to HTML",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.convertToMarkdown",
+        "command": "chartifact.convertToMarkdown",
         "title": "Convert to Markdown",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.editIdoc",
+        "command": "chartifact.editIdoc",
         "title": "Edit Interactive Document",
         "category": "Interactive Documents"
       },
       {
-        "command": "interactive-documents-vscode.previewIdocSplit",
+        "command": "chartifact.previewIdocSplit",
         "title": "Preview Interactive Document (Split View)",
         "category": "Interactive Documents",
         "icon": "$(preview)"
@@ -54,91 +64,91 @@
     "menus": {
       "explorer/context": [
         {
-          "command": "interactive-documents-vscode.newIdocJson",
+          "command": "chartifact.newIdocJson",
           "when": "explorerResourceIsFolder",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.newIdocMarkdown",
+          "command": "chartifact.newIdocMarkdown",
           "when": "explorerResourceIsFolder",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.previewIdoc",
+          "command": "chartifact.previewIdoc",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.previewIdoc",
+          "command": "chartifact.previewIdoc",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToHtml",
+          "command": "chartifact.convertToHtml",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToHtml",
+          "command": "chartifact.convertToHtml",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToMarkdown",
+          "command": "chartifact.convertToMarkdown",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.editIdoc",
+          "command": "chartifact.editIdoc",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         }
       ],
       "editor/title": [
         {
-          "command": "interactive-documents-vscode.previewIdocSplit",
+          "command": "chartifact.previewIdocSplit",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "navigation"
         },
         {
-          "command": "interactive-documents-vscode.previewIdocSplit",
+          "command": "chartifact.previewIdocSplit",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
-          "command": "interactive-documents-vscode.previewIdoc",
+          "command": "chartifact.previewIdoc",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.previewIdoc",
+          "command": "chartifact.previewIdoc",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToHtml",
+          "command": "chartifact.convertToHtml",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToHtml",
+          "command": "chartifact.convertToHtml",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.convertToMarkdown",
+          "command": "chartifact.convertToMarkdown",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.editIdoc",
+          "command": "chartifact.editIdoc",
           "when": "resourceExtname == .md && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.md$/",
           "group": "interactive-documents"
         },
         {
-          "command": "interactive-documents-vscode.editIdoc",
+          "command": "chartifact.editIdoc",
           "when": "resourceExtname == .json && resourceFilename =~ /\\.idoc( copy( \\d+)?)?\\.json$/",
           "group": "interactive-documents"
         }
@@ -160,6 +170,10 @@
     "package-web": "npm run check-types && npm run lint && node esbuild.js --production",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
+    "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. .",
+    "package": "vsce package"
+  },
+  "devDependencies": {
+    "vsce": "^2.15.0"
   }
 }
