--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "",
   "version": "0.0.1",
+  "publisher": "msrvida",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/microsoft/interactive-documents.git"
@@ -167,11 +168,13 @@
     "watch-web": "npm-run-all -p watch-web:*",
     "watch-web:esbuild": "node esbuild.js --watch",
     "watch-web:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package-web": "npm run check-types && npm run lint && node esbuild.js --production",
+    "package-web": "npm run check-types && npm run lint && npm run resources && node esbuild.js --production",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. .",
-    "package": "vsce package"
+    "package": "vsce package",
+    "prepackage": "npm run package-web",
+    "postpackage": "node ./scripts/move-package.mjs"
   },
   "devDependencies": {
     "vsce": "^2.15.0"
