--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "clean": "npm run clean --workspaces --if-present",
     "build": "npm run build:01 --workspaces --if-present && npm run build:02 --workspaces --if-present && npm run build:03 --workspaces --if-present && npm run build:04 --workspaces --if-present && npm run build:05 --workspaces --if-present",
-    "start": "npm run dev -w @microsoft/interactive-document-host"
+    "start": "npm run dev -w @microsoft/interactive-document-host",
+    "package": "npm run package --workspaces --if-present"
   },
   "repository": {
     "type": "git",
