--- a/packages/webview/tsconfig.json
+++ b/packages/webview/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "dist",
+        "module": "commonjs",
         "typeRoots": [
             "./src"
         ],
