update start script to run multiple services concurrently; add dev script to common and schema packages

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,6 +5,7 @@
   "main": "dist/esnext/index.js",
   "scripts": {
     "clean": "rimraf dist",
+    "dev": "tsc -p . -w",
     "tsc": "tsc -p .",
     "build": "npm run tsc",
     "build:00": "npm run build"
