--- a/packages/vscode-resources/package.json
+++ b/packages/vscode-resources/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf dist",
     "tsc": "tsc -p .",
     "build:06": "npm run tsc"
   },
