rename to @microsoft/chartifact-schema

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schema",
+  "name": "@microsoft/chartifact-schema",
   "version": "1.0.0",
   "main": "index.js",
   "types": "dist/idoc.d.ts",
