--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "deploy": "node ./scripts/deploy.js",
-    "dev": "tsc -p . -w",
+    "dev": "vite",
+    "watch": "tsc -p . -w",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
     "build": "npm run tsc && npm run bundle",
