--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "convert": "node ./dist/convert.mjs",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist && rimraf ../../docs/assets/examples/json && rimraf ../../docs/assets/examples/markdown",
     "build": "tsc -p .",
-    "deploy": "npm run build && npm run readme"
+    "deploy": "npm run clean && npm run build && npm run convert"
   },
   "author": "Dan Marshall",
   "license": "MIT",
