--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -19,6 +19,7 @@
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
     "build": "npm run tsc && npm run bundle",
+    "postbuild": "node ./scripts/copy-css.mjs",
     "build:02": "npm run build"
   },
   "repository": {
