--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -11,6 +11,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "dev": "vite",
+    "resources": "node scripts/resources.mjs",
+    "prebuild": "npm run resources",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
     "build": "npm run tsc && npm run bundle",
