--- a/packages/web-frontend/package.json
+++ b/packages/web-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-frontend",
+  "name": "@microsoft/web-frontend",
   "private": true,
   "version": "1.0.0",
   "main": "index.js",
