--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
     "glob": "^11.0.2",
+    "mermaid": "^11.10.0",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
