create html-wrapper package

--- a/packages/html-wrapper/tsconfig-client.json
+++ b/packages/html-wrapper/tsconfig-client.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
+        "declaration": true,
+        "outDir": "js",
         "module": "commonjs",
         "skipLibCheck": true,
         "target": "esnext",
